--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,81 @@
-body {
+*{
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: sans-serif;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body{
+  background-color: #f5f5f5;
+  color: #111;
+}
+.container{
+   max-width: 1300px;
+   width: 100%;
+   margin: auto;
+}
+section{
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+h1{
+  font-size: 50px;
+  line-height: 60px;
+  text-align: center;
+  margin-bottom: 40px;
+}
+
+.cards{
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.card{
+  flex: 0 0 calc(33.33%-20px);
+  max-width: calc(33.33%-20px);
+  width: 20%;
+  background: #fff;
+  border-radius: 10px;
+  padding: 20px;
+  margin: 20px;
+  transition: .3s;
+  border: 2px solid transparent;
+  align-content: center;
+}
+
+.card:hover{
+  border-color: #1d39c4;
+}
+
+button{
+  border: #f5f5f5;
+  outline: #f5f5f5;
+  background: #f5f5f5;
+  color: black;
+  border-radius: 5px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 3px;
+  cursor: pointer;
+  transition: .3s;
+}
+
+button:hover{
+  border-color: black;
+}
+
+.cardButtom{
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+}
+
+
+.filter{
+  align-items: center;
+
 }
